--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,11 @@
   padding-top: 20px;
 }
 
+.txtSticks {
+  text-align: center;
+  font-size: 50px;
+}
+
 .btn-div {
   display: flex;
   padding: 20px;
@@ -44,8 +49,5 @@
 
 .btn {
   font-size: 100px;
-}
-
-.btn-1 {
-  padding: 20px;
+  margin: 10px;
 }
