--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,400&display=swap');
 
-.body {
+body {
   font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
+  background-color: rgb(140, 149, 159);
 }
 
 .container {
@@ -14,6 +15,13 @@
 .player-div {
   display: flex;
   justify-content: space-evenly;
+}
+
+.sticks-div {
+  text-align: center;
+  padding-top: 150px;
+  font-size: 5rem;
+  color: rgb(0, 123, 255);
 }
 
 .player1 {
@@ -41,7 +49,7 @@
   font-size: 50px;
 }
 
-.btn-div {
+.takeSticks-div {
   display: flex;
   padding: 20px;
   align-self: center;
@@ -50,4 +58,5 @@
 .btn {
   font-size: 100px;
   margin: 10px;
+  cursor: pointer;
 }
